PyMaker/datas/object2/RawHTML/i2701/Python_DOC_referPages.syntax-error-in-python-in-try-except-block.txt
<div class="post-text" itemprop="text">
<p>I am running someone else's code:</p>
<pre><code>./run_me.sh 
Traceback (most recent call last):
  File "train.py", line 13, in &lt;module&gt;
    import options
  File "/Users/test/Desktop/lang-emerge/options.py", line 44
    except IOError, msg: parser.error(str(msg));
                  ^
SyntaxError: invalid syntax
</code></pre>
<p>I tried modifying the except block, but again I get an error:</p>
<pre><code>    ./run_me.sh 
    Traceback (most recent call last):
      File "train.py", line 13, in &lt;module&gt;
        import options
      File "/Users/test/Desktop/lang-emerge/options.py", line 44
        except: IOError, msg: parser.error(str(msg));

           ^
SyntaxError: only single target (not tuple) can be annotated
</code></pre>
<p>The code where error is:</p>
<pre><code> try: parsed = vars(parser.parse_args());
 except: IOError, msg: parser.error(str(msg));
</code></pre>
<p>Don't know what to do to resolve the error? The msg is a keyword in python try/except blocks.</p>
<p>With the modified code, <code>IOError as msg:</code></p>
<p>I get:</p>
<pre><code>./run_me.sh 
Traceback (most recent call last):
  File "train.py", line 13, in &lt;module&gt;
    import options
  File "/Users/test/Desktop/lang-emerge/options.py", line 44
    except: IOError as msg: parser.error(str(msg));

                     ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<pre><code>except: IOError as msg: parser.error(str(msg));
</code></pre>
<p>You have unnecessary colon. You should remove it: Below code is the correct one. </p>
<pre><code>except IOError as msg: parser.error(str(msg));
</code></pre>
</div>
<span class="comment-copy">No, it's not a keyword. <code>except IOError as msg:</code></span>
<span class="comment-copy">That's old Python 2 syntax</span>
<span class="comment-copy">@coldspeed thanks, i tried using IOError as msg, still getting an error..</span>
<span class="comment-copy">@mourinho without the colon, not: <code>except: IOError as msg:</code> but <code>except IOError as msg:</code>. See <a href="https://docs.python.org/3/tutorial/errors.html#handling-exceptions" rel="nofollow noreferrer">the documentation</a></span>
<span class="comment-copy">@PeterWood thanks, plz put it as answer, it solved the issue!</span>
